--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ var baselayers = {
  
 // Ajout de la couche NDVI
   
-var ndvi = L.tileLayer.wms(wmsurl, {layers: 'NDVI-OCTOBRE-2023',format: 'image/png',transparent:true, opacity: 0.5}); 
+var ndvi = L.tileLayer.wms(wmsurl, {layers: 'NDVI',format: 'image/png',transparent:true, opacity: 0.5}); 
   
    
 // Gestion des couches
