--- a/leaflet-wms.html
+++ b/leaflet-wms.html
@@ -46,7 +46,8 @@
 
 <body>
     <div class="container">
-        <h1>Services Numériques - TP n°1 : Exemple d'ffichage d'un flux WMS de SentinelHub via la librairie Javascript Leaflet</h1>
+        <h1>Services Numériques</h1>
+        <h3>TP n°1 : Exemple d'affichage d'un flux WMS de SentinelHub dans un portail web</h3>
 
         <div id='IDcarte'></div>
 
