--- a/leaflet-wms.html
+++ b/leaflet-wms.html
@@ -52,14 +52,22 @@
         <div id='IDcarte'></div>
 
         <script>
-            var maCarte = L.map('IDcarte').setView([-21, 56], 8);
-
+            var maCarte = L.map('IDcarte').setView([48.11, -1.655], 10);
+            
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png?{foo}', {
                 foo: 'bar',
                 attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
             }).addTo(maCarte);
 
             L.marker([-21.12, 55.53]).addTo(maCarte).bindPopup("<b>Hello !</b><br />Je suis un popup."); 
+            // Recommended (explicit source)
+var options = {'transparent': true};
+var source = L.WMS.source("https://services.sentinel-hub.com/ogc/wms/8b3515da-5c59-4fae-bad7-fe5412c73e52", options);
+var mylayer = source.getLayer('NDVI');
+var control = L.control.layers({}, {
+    'Layer 1': mylayer
+})
+control.addTo(map);
         </script>
     </div>
 </body>
