--- a/leaflet-wms.html
+++ b/leaflet-wms.html
@@ -67,7 +67,7 @@ var mylayer = source.getLayer('NDVI');
 var control = L.control.layers({}, {
     'Layer 1': mylayer
 })
-control.addTo(map);
+control.addTo(maCarte);
         </script>
     </div>
 </body>
