--- a/leaflet-wms.html
+++ b/leaflet-wms.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+E<!DOCTYPE html>
 <html lang="fr">
 <meta charset="utf-8">
 
@@ -63,7 +63,7 @@
             // Recommended (explicit source)
 var options = {'transparent': true};
 var source = L.WMS.source("https://services.sentinel-hub.com/ogc/wms/8b3515da-5c59-4fae-bad7-fe5412c73e52", options);
-var mylayer = source.getLayer('NDVI');
+var mylayer = source.getLayer('NDVI-HERVE');
 var control = L.control.layers({}, {
     'Layer 1': mylayer
 })
