--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@ var baselayers = {
  
 // Ajout de la couche NDVI
   
-var ndvi = L.tileLayer.wms(wmsurl, {layers: 'NDVI',format: 'image/png',transparent:true, opacity: 0.5}); 
+var ndvi = L.tileLayer.wms(wmsurl, {layers: 'NDVI-HERVE',format: 'image/png',transparent:true, opacity: 0.5}); 
   
    
 // Gestion des couches
   
-  var mylayers = {"NDVI": ndvi};
+  var mylayers = {"NDVI-HERVE": ndvi};
   
 // Selecteurs fonds de carte
  
