--- a/leaflet-wms.html
+++ b/leaflet-wms.html
@@ -57,16 +57,17 @@ E<!DOCTYPE html>
       const url = "https://services.sentinel-hub.com/ogc/wms/8b3515da-5c59-4fae-bad7-fe5412c73e52";
       const mapOptions = {
                layers: "NDVI-HERVE",
+               'transparent': true
       };
+      const tileLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png?{foo}', {
+                foo: 'bar',
+                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+      }).addTo(map);      
       const wmsLayer = L.tileLayer
         .wms(url, mapOptions)
         .addTo(map);
-            /*
-            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png?{foo}', {
-                foo: 'bar',
-                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-            }).addTo(maCarte);
-
+  
+/*
             L.marker([-21.12, 55.53]).addTo(maCarte).bindPopup("<b>Hello !</b><br />Je suis un popup."); 
             // Recommended (explicit source)
 var options = {'transparent': true};
