--- a/leaflet-wms.html
+++ b/leaflet-wms.html
@@ -73,7 +73,7 @@ E<!DOCTYPE html>
 
       // Ajout de la couche NDVI à la carte      
       const wmsLayer = L.tileLayer
-        .wms(url, mapOptions)
+        .wms(wmsUrl, mapOptions)
         .addTo(map);
             
         </script>
